# zmplayer

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: commands.rs  config.rs  lib.rs  main.rs  player.rs
