[package]
name = "ratatui-hello-world"
version = "0.1.0"
authors = ["Jules <agent@example.com>"] # You can replace this with actual author info if desired
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0" # Using version from tutorial, can be updated if needed
ratatui = "0.26.0" # Using version from tutorial, can be updated if needed
